--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
     <div class="aaa">
@@ -14,7 +14,7 @@
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -46,6 +46,6 @@
         </li>
       </ul>
     </div>
-    <script SRC="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
