--- a/index.html
+++ b/index.html
@@ -5,47 +5,55 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Prioritization matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="body">
+    <header class="header">
+      <img class="header__image" src="./eisenhower-matrix.jpg" alt="Prioritization matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+    <main class="main">
+      <section class="section">
+        <h3 class="section__title section__title--create">
+          <label for="new-task">Add Item</label>
+        </h3>
+        <div class="task-item task-item--create">
+          <input class="task-item__input" type="text" id="new-task">
+          <button class="task__item-btn btn-add">Add</button>
         </div>
       </section>
-      <section>
-        <h3>Todo</h3>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button icon"></button>
+      <section class="section">
+        <h3 class="section__title">Todo</h3>
+        <ul class="task-list active-tasks">
+          <li class="task-list__item task-item">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__title">Pay Bills</label>
+            <input class="task-item__input" type="text">
+            <button class="task__item-btn btn-edit">Edit</button>
+            <button class="task__item-btn btn-delete">
+              <img class="btn-delete__icon" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button icon"></button>
+          <li class="task-list__item task-item task-item--edit">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__title">Go Shopping</label>
+            <input class="task-item__input" type="text" value="Go Shopping">
+            <button class="task__item-btn btn-edit">Save</button>
+            <button class="task__item-btn btn-delete">
+              <img class="btn-delete__icon" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="Delete button icon"></button>
+      <section class="section">
+        <h3 class="section__title">Completed</h3>
+        <ul class="task-list completed-tasks">
+          <li class="task-list__item task-item">
+            <input class="task-item__checkbox" type="checkbox" checked>
+            <label class="task-item__title">See the Doctor</label>
+            <input class="task-item__input" type="text">
+            <button class="task__item-btn btn-edit">Edit</button>
+            <button class="task__item-btn btn-delete">
+              <img class="btn-delete__icon" src="./remove.svg" alt="Delete button icon">
+            </button>
           </li>
         </ul>
       </section>
